<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="action_settings">Settings</string>
    <string name="score_x_wins" description="Displays how many times X won">X wins: %1$d</string>
    <string name="draws" description="Displays how many times the game ended in a draw">Draws: %1$d</string>
    <string name="score_o_wins" description="Displays how many times O won">O wins: %1$d</string>
    <string name="title_activity_app_menu">AppMenu</string>
    <string name="exit">Exit</string>
    <string name="reset_score">Reset Score</string>
    <string name="new_game">New Game</string>
    <string name="player_vs_computer">Player vs Computer</string>
    <string name="player_vs_player">Player vs Player</string>
    <string name="empty_text" description="Used when the button was not pushed"> </string>
    <string name="x">X</string>
    <string name="o">0</string>
</resources>
