<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_new_game"
        android:orderInCategory="100"
        android:title="@string/new_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_vs_computer"
        android:orderInCategory="100"
        android:title="@string/player_vs_computer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_two_players"
        android:orderInCategory="100"
        android:title="@string/player_vs_player"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset_score"
        android:orderInCategory="100"
        android:title="@string/reset_score"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>
