<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar">

    </include>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:columnCount="3"
        android:padding="5dp"
        android:rowCount="3">

        <Button
            android:id="@+id/button_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="@dimen/text_size_buttons" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="@dimen/text_size_buttons" />
    </GridLayout>

    <TextView
        android:id="@+id/textview_x_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/score_x_wins" />

    <TextView
        android:id="@+id/textview_o_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_x_wins"
        android:layout_centerHorizontal="true"
        android:text="@string/score_o_wins" />

    <TextView
        android:id="@+id/textview_draws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_o_wins"
        android:layout_centerHorizontal="true"
        android:text="@string/draws" />


</RelativeLayout>
